feat: users entity - Closes #23
